# Midas

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
scripts/: minhook.cmake  post-build.bat
src/chat_msg_parser/: chat_msg_parser.h
src/main/: main.cpp  main.h
src/midas_types/: PropertyClass.h
src/spoofer/: config.hpp
src/spoofer/hooks/: iphlp.hpp  k32_read.hpp  kern32.hpp
src/wiz_structs/: common.h  window.h
